# bead-tray

./: .gitignore  README.md  tray.scad
bead_simulator/: Cargo.toml
bead_simulator/src/: main.rs
